--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codempower",
+  "name": "edumim",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://bestwpware.com/react-templates/edumim/",
